fix table header overlapped on menu

--- a/src/assets/css/limit-order.scss
+++ b/src/assets/css/limit-order.scss
@@ -57,7 +57,7 @@
       margin-bottom: 5px;
       position: sticky;
       top: 0;
-      z-index: 999;
+      z-index: 2;
 
       .rt-th {
         font-weight: 500;
